--- a/app.json
+++ b/app.json
@@ -4,21 +4,30 @@
     "slug": "EAMS-IESCO",
     "version": "1.0.0",
     "orientation": "portrait",
+    "newArchEnabled": true,
     "icon": "./assets/Appicon/ic_launcher.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#EC1110"
-    },
+      "backgroundColor": "#fff"
+     },
+    "permissions": [
+    "CAMERA",
+    "READ_EXTERNAL_STORAGE",
+    "WRITE_EXTERNAL_STORAGE"
+     ],
     "assetBundlePatterns": [
       "**/*"
     ],
     "ios": {
       "supportsTablet": true
     },
+
     "android": {
+   
       "usesCleartextTraffic":true,
+    
       "adaptiveIcon": {
         "foregroundImage": "./assets/Appicon/ic_launcher.png",
         "backgroundColor": "#EC1110"
@@ -32,7 +41,7 @@
       "eas": {
         "projectId": "1b150ed7-9ac4-473e-9bde-e55a99449e03"
       }
-  },
+    },
    "plugins":[
     [
     "expo-build-properties",
