--- a/package.json
+++ b/package.json
@@ -9,27 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.19.6",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/cli-server-api": "^15.1.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.2",
-    "expo": "~49.0.15",
-    "expo-build-properties": "^0.8.3",
-    "expo-camera": "^13.6.0",
-    "expo-file-system": "~15.4.4",
-    "expo-image-manipulator": "^11.5.0",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6",
+    "expo-build-properties": "~0.13.1",
+    "expo-camera": "~16.0.5",
+    "expo-file-system": "~18.0.2",
+    "expo-image-manipulator": "~13.0.5",
+    "expo-image-picker": "~16.0.1",
+    "expo-media-library": "~17.0.2",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.1",
     "react-native-animatable": "^1.4.0",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
     "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2",
+    "expo": "^52.0.4"
   },
   "private": true
 }
